// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`App Component Test renders the App component 1`] = `
<div
  data-testid="searchBar"
/>
`;

exports[`App Component Test renders the App component 2`] = `
<div
  data-testid="list"
>
  <button
    data-testid="edit-button"
  />
  <button
    data-testid="delete-button"
  />
</div>
`;

exports[`App Component Test renders the App component 3`] = `
<div
  data-testid="map"
/>
`;
